<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/drone">


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="160dp"
        android:background="#fff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:text="@string/register_here"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#fff"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>