<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash"
    android:background="@drawable/djitello">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/companyname"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/splash_title"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/quadcoptorlogo"
            android:layout_marginTop="-60dp"
            android:layout_marginStart="270dp"/>

        <Button
            android:id="@+id/btn_tologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:background="@color/logincolor"/>

        <Button
            android:id="@+id/btn_tosignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="30sp"
            android:background="@color/signupcolor"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>